# cmake_learing

./: CMakeLists.txt  CMakeLists_math.txt  README.md  calculatesqrt.cpp  config.h
math/: mypower.cpp  mypower.h
